java/java-tests/testData/codeInsight/daemonCodeAnalyzer/javadocDeclaration/Param4.java
class Test {
  /**
   * @param <error descr="Cannot resolve symbol 'i'">i</error> here description goes
   * <warning descr="'@return' tag description is missing">@return</warning>
   */
  int d() { return 1; }
}